<resources>
    <string name="app_name">GsanaStrengthAndSizeApp</string>

    <string name="app_title">Strength and Size</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="total_strength">%f KG</string>
    <string name="filter">Filter</string>
    <string name="custom">Custom</string>
    <string name="settings">Settings</string>
    <string name="leagues_you_are_currently_in">Leagues you are currently in:</string>
    <string name="you_are_not_part_of_any_leagues_yet_create_or_join_one">You are not part of any leagues yet! Create or join one</string>
    <string name="profile">Profile</string>
    <string name="gym_name">Gym name</string>
    <string name="bench_press_kg">Bench press (kg)</string>
    <string name="bench_press">Bench press</string>
    <string name="squat_kg">Squat (kg)</string>
    <string name="squat">Squat</string>
    <string name="deadlift_kg">Deadlift (kg)</string>
    <string name="deadlift">Deadlift</string>
    <string name="over_head_press_kg">Over Head Press (kg)</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log out</string>
    <string name="claim">Claim</string>
    <string name="rules">Rules</string>
    <string name="leagues">Leagues</string>

    <string-array name="sort_string_array">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
    </string-array>
</resources>
