<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySettings"
    android:background="@color/ssBackgroundBlack"
    >

    <ImageView
        android:id="@+id/settings_back_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@+id/settings_image_view"
        app:layout_constraintBottom_toBottomOf="@+id/settings_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settings_image_view"
        android:src="@drawable/ic_keyboard_backspace_24px"
        android:tint="@color/ssWhite"
        android:contentDescription="@string/app_name"
        />

    <ImageView
        android:id="@+id/settings_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/ic_log_in_bear"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="fitCenter"
        android:background="@color/ssBackgroundBlack"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/settings_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/ssWhite"
        android:text="@string/settings"
        />

    <TextView
        android:id="@+id/settings_sub_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/settings_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/leagues_you_are_currently_in"
        android:textSize="24sp"
        android:textColor="@color/ssWhite"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/settings_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_sub_heading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>