<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ActivitySignUp"
android:background="@color/ssBackgroundBlack"
    >

<ImageView
    android:id="@+id/sign_up_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="50dp"
    android:src="@mipmap/ic_log_in_bear"
    android:textSize="30sp"
    android:textStyle="bold"
    android:textColor="@color/ssBackgroundBlack"
    app:layout_constraintDimensionRatio="1:1"
    android:scaleType="fitCenter"
    android:background="#04090f"
    android:contentDescription="@string/app_name"
    />

<TextView
    android:id="@+id/sign_up_heading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/sign_up_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/sign_up"
    android:textSize="30sp"
    android:textColor="@color/ssWhite"
    android:textStyle="bold"
    />

<TextView
    android:id="@+id/sign_up_email_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/sign_up_heading"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/sign_up_email_input"
    android:layout_marginTop="60dp"
    android:textSize="30sp"
    android:textColor="@color/ssWhite"
    android:text="@string/email"
    app:layout_constraintVertical_chainStyle="packed"
    app:layout_constraintVertical_bias="0"
    />

<EditText
    android:id="@+id/sign_up_email_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:padding="6dp"
    app:layout_constraintTop_toBottomOf="@id/sign_up_email_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/sign_up_password_text"
    android:inputType="textEmailAddress"
    android:hint="@string/email"
    android:textAlignment="center"
    android:textColorHint="@color/ssBackgroundBlack"
    android:textColor="@color/ssBackgroundBlack"
    android:background="@drawable/white_border"
    android:autofillHints=""
    tools:targetApi="o"
    />

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/sign_up_email_check"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:src="@drawable/ic_baseline_check_circle_24px"
    android:tint="@color/ssGreen"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="@+id/sign_up_email_input"
    app:layout_constraintEnd_toEndOf="@+id/sign_up_email_input"
    app:layout_constraintTop_toTopOf="@+id/sign_up_email_input" />

<TextView
    android:id="@+id/sign_up_password_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/sign_up_email_input"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/sign_up_password_input"
    android:layout_marginTop="24dp"
    android:textSize="30sp"
    android:textColor="@color/ssWhite"
    android:text="@string/password"
    />

<EditText
    android:id="@+id/sign_up_password_input"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/sign_up_password_text"
    app:layout_constraintStart_toStartOf="@id/sign_up_email_input"
    app:layout_constraintEnd_toEndOf="@id/sign_up_email_input"
    app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
    android:layout_marginTop="10dp"
    android:padding="6dp"
    android:hint="@string/password"
    android:shadowColor="@color/ssBlack"
    android:textColor="@color/ssBlack"
    android:textAlignment="center"
    android:textColorHint="@color/ssBackgroundBlack"
    android:inputType="textPassword"
    android:background="@drawable/white_border"
    android:autofillHints=""
    tools:targetApi="o" />

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/sign_up_password_check"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="@+id/sign_up_password_input"
    app:layout_constraintBottom_toBottomOf="@+id/sign_up_password_input"
    app:layout_constraintEnd_toEndOf="@+id/sign_up_password_input"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:src="@drawable/ic_baseline_check_circle_24px"
    android:visibility="invisible"
    android:tint="#0CF032"
    />

<ProgressBar
    android:id="@+id/sign_up_button_progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="@+id/sign_up_button"
    app:layout_constraintBottom_toBottomOf="@+id/sign_up_button"
    app:layout_constraintStart_toStartOf="@+id/sign_up_button"
    app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
    android:visibility="invisible"
    android:backgroundTint="@color/ssBrown"
    android:indeterminate="true"
    android:indeterminateTintMode="src_atop"
    android:indeterminateTint="@color/ssBrown"
    />

<Button
    android:id="@+id/sign_up_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/sign_up_password_input"
    app:layout_constraintStart_toStartOf="@id/sign_up_password_input"
    app:layout_constraintEnd_toEndOf="@id/sign_up_password_input"
    app:layout_constraintBottom_toTopOf="@+id/sign_up_button_cancel"
    android:layout_marginTop="50dp"
    android:background="@drawable/white_border"
    android:backgroundTint="@color/ssBrown"
    android:text="@string/sign_up"
    android:textColor="@color/ssWhite"
    android:textSize="18sp"
    android:textAllCaps="false"
    />

    <Button
        android:id="@+id/sign_up_button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintStart_toStartOf="@id/sign_up_password_input"
        app:layout_constraintEnd_toEndOf="@id/sign_up_password_input"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_border"
        android:backgroundTint="@color/ssBrown"
        android:text="Already a member? Log In"
        android:textColor="@color/ssWhite"
        android:textSize="18sp"
        android:textAllCaps="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>